--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -159,4 +159,35 @@ title = {{The Importance of Colormaps}},
 volume = {22},
 year = {2020}
 }
-
+@article{Gregory&Cooper2009,
+author = {Gregory, I.N. and Cooper, D.},
+title = {Thomas Gray, Samuel Taylor Coleridge and geographical information systems: A literary GIS of two Lake District tours},
+journal = {International Journal of Humanities and Arts Computing},
+issue = {3},
+number = {1-2},
+year = {2009},
+pages = {61--84}
+}
+@article{Gritta2017,
+author = {Milan Gritta, Mohammad Taher Pilehvar, Nut Limsopatham and Nigel Collier},
+title = {What’s missing in geographical parsing?},
+journal = {Lang Resources and Evaluation},
+year = {2017},
+number = {53},
+pages = {603--623}
+}
+@incollection{Heuser2016,
+author = {Ryan Heuser, Mark Algee-Hewitt, Annalise Lockhart, Erik Steiner and Van Tran},
+title = {Mapping the Emotions of London in Fiction, 1700-1900: A Crowdsourcing Experiment},
+booktitle = {Literary Mapping in the Digital Age},
+year = {2016},
+pages = {25--46}
+}
+@article{Murrieta-Flores2017,
+author = {Patricia Murrieta-Flores, Christopher Donaldson, Ian Gregory},
+title = {GIS and Literary History: Advancing Digital Humanities research through the Spatial Analysis of historical travel writing and topographical literature},
+journal = {Digital Humanities Quarterly},
+year = {2017},
+issue = {11},
+number = {1}
+}
